--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <div class="col-sm-6 col-sm-offset-4">
-<form>
+<form method="POST">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" class="btn btn-default center" value="Login" />
 </form>
