--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -21,6 +21,8 @@
 <p>
 {{ forloop.counter }})
 {{ video.embed_code|safe }}
+<br/>
+<a href="{{ video.get_absolute_url }}">{{ video.title }}</a>
 </p>
 {% endfor %}
 
