--- a/src/templates/videos/video_list.html
+++ b/src/templates/videos/video_list.html
@@ -5,6 +5,10 @@
 
 {% block content %}
 
-{{ queryset }}
+{% for item in queryset %}
+
+<a href="{{ item.get_absolute_url }}">{{ item }}</a><br/>
+
+{% endfor %}
 
 {% endblock %}
