--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -16,6 +16,7 @@
     <!--<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">-->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
@@ -56,7 +57,14 @@
     </div> <!-- /container -->
 
   {% include 'javascript.html' %}
+  <script>
+    $(document).ready(function(){
+        //alert("jquery working");
+        {% block jquery %}
 
+        {% endblock %}
+    });
+  </script>
 
   </body>
 </html>
