--- a/src/templates/videos/video_detail.html
+++ b/src/templates/videos/video_detail.html
@@ -2,9 +2,40 @@
 
 {% block title %} {% endblock %}
 
+ <script>
+
+        {% block jquery %}
+        function update_iframe_size(){
+            $("iframe").css("width", "100%");
+            $("iframe").css("height", "100%");
+
+            var width = $("iframe").css("width");
+            var height = $("iframe").css("height");
+            console.log(width);
+            console.log(height);
+        }
+
+            $(window).bind("resize", function(){
+
+                update_iframe_size();
+            });
+        {% endblock %}
+</script>
+
 
 {% block content %}
 
 {{ obj.embed_code|safe }}
 
+<br/>
+
+<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ obj.get_share_link }}">
+<i class="fa fa-facebook-official fa-3x"></i>
+</a>
+
+<a target="_blank" href="https://twitter.com/home?status={{ obj.get_share_message|safe }}"><i class="fa fa-twitter-square fa-3x"></i></a>
+
+<a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url={{ obj.get_share_link }}&title={{ obj.get_share_message|safe }}&summary={{ obj.get_share_message|safe }}&source={{ obj.get_share_link }}">
+<i class="fa fa-linkedin-square fa-3x"></i>
+</a>
 {% endblock %}
