--- a/src/templates/videos/video_detail.html
+++ b/src/templates/videos/video_detail.html
@@ -60,7 +60,16 @@
         </form>
         <table class="table">
         {% for comment in comments %}
-            <tr><td>{{ comment.get_comment }}</td></tr>
+            <tr><td>{{ comment.get_comment }}
+                <br/><small>via {{ comment.user }} | {{ comment.timestamp|timesince }} ago</small>
+                {% if not  comment.is_child %}
+            <ul>
+                {% for child in comment.get_children %}
+                <li>{{ child.get_comment }} <small>via {{ child.user}}</small></li>
+                {% endfor %}
+            </ul>
+                {% endif %}
+            </td></tr>
         {% endfor %}
         </table>
     </div>
