reply to a comment is successfull

--- a/src/templates/videos/video_detail.html
+++ b/src/templates/videos/video_detail.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 
 {% block title %} {% endblock %}
+<style>
+{% block style %}
+.reply_comment {
+    display: none;
+}
+{% endblock %}
+</style>
 
  <script>
 
@@ -25,6 +32,10 @@
             $(window).bind("resize", function(){
 
                 update_iframe_size();
+            });
+            $(".reply_btn").click(function(e){
+                e.preventDefault();
+                $(this).next(".reply_comment").fadeToggle();
             });
         {% endblock %}
 </script>
@@ -56,8 +67,12 @@
         <h1>Comments/Questions</h1>
         <form method="POST" action="">{% csrf_token %}
             {{ comment_form.as_p }}
-            <input type="submit" value="Add comment"/>
+            <input type="submit" class="btn btn-default" value="Add comment"/>
         </form>
+
+        <br/>
+        <br/>
+
         <table class="table">
         {% for comment in comments %}
             <tr><td>{{ comment.get_comment }}
@@ -65,9 +80,19 @@
                 {% if not  comment.is_child %}
             <ul>
                 {% for child in comment.get_children %}
-                <li>{{ child.get_comment }} <small>via {{ child.user}}</small></li>
+                <li>{{ child.get_comment }} <small>via {{ child.user}}</small>
+
+                </li>
                 {% endfor %}
             </ul>
+                <a href="#" class="reply_btn">Reply</a>
+                <div class="reply_comment">
+                    <form method="POST" action="">{% csrf_token %}
+                        <input type="hidden" name="parent_id" value="{{ comment.id }}" />
+                        {{ comment_form.as_p }}
+                        <input type="submit"  class="btn btn-default" value="Add reply"/>
+                    </form>
+                </div>
                 {% endif %}
             </td></tr>
         {% endfor %}
