--- a/src/templates/videos/video_detail.html
+++ b/src/templates/videos/video_detail.html
@@ -85,7 +85,7 @@
                 </li>
                 {% endfor %}
             </ul>
-                <a href="#" class="reply_btn">Reply</a>
+                <a href="#" class="reply_btn">Reply</a> | <a href="{{ comment.get_absolute_url }}">View Thread</a>
                 <div class="reply_comment">
                     <form method="POST" action="">{% csrf_token %}
                         <input type="hidden" name="parent_id" value="{{ comment.id }}" />
