--- a/src/templates/videos/video_detail.html
+++ b/src/templates/videos/video_detail.html
@@ -65,7 +65,9 @@
 <div class="row">
     <div class="col-sm-12">
         <h1>Comments/Questions</h1>
-        <form method="POST" action="">{% csrf_token %}
+        <form method="POST" action="{% url 'comment_create' %}">{% csrf_token %}
+            <input type="hidden" name="video_id" value="{{ obj.id }}"/>
+            <input type="hidden" name="origin_path" value="{{ request.get_full_path }}"/>
             {{ comment_form.as_p }}
             <input type="submit" class="btn btn-default" value="Add comment"/>
         </form>
@@ -85,9 +87,11 @@
                 </li>
                 {% endfor %}
             </ul>
-                <a href="#" class="reply_btn">Reply</a> | <a href="{{ comment.get_absolute_url }}">View Thread</a>
+                <a href="{{ comment.get_absolute_url }}">View Thread</a> | <a href="#" class="reply_btn">Reply</a>
                 <div class="reply_comment">
-                    <form method="POST" action="">{% csrf_token %}
+                    <form method="POST" action="{% url 'comment_create' %}">{% csrf_token %}
+                        <input type="hidden" name="video_id" value="{{ obj.id }}"/>
+                        <input type="hidden" name="origin_path" value="{{ comment.get_origin }}"/>
                         <input type="hidden" name="parent_id" value="{{ comment.id }}" />
                         {{ comment_form.as_p }}
                         <input type="submit"  class="btn btn-default" value="Add reply"/>
