conten_type to Video, Category by adding a new entity

--- a/src/templates/videos/video_detail.html
+++ b/src/templates/videos/video_detail.html
@@ -48,6 +48,15 @@
 <div class="col-sm-12" id = "main_video">
 {{ obj.embed_code|safe }}
 </div>
+{% if obj.tags.all %}
+<div class="col-sm-12">
+    <ul>
+{% for tag in obj.tags.all %}
+    <li>{{ tag }}</li>
+{% endfor %}
+    </ul>
+</div>
+{% endif %}
 
 <br/>
 
