--- a/src/templates/notifications/all.html
+++ b/src/templates/notifications/all.html
@@ -4,7 +4,7 @@
 
 <table class="table">
 {% for note in notifications %}
-    <tr><td>{{ note }}</td><td>{% if note.read %} Read {% else %} Unread {% endif %}</td></tr>
+    <tr><td>{{ note|safe }}</td><td>{% if note.read %} Read {% else %} Unread {% endif %}</td></tr>
 {% endfor %}
 </table>
 {% endblock %}
