--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -17,6 +17,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
+              <li><a class="notification-toggle" href="#">Notifications</a></li>
               <li><a href="{% url 'logout' %}">Logout</a> </li>
             {% else %}
               <li><a href="{% url 'login' %}">Login</a> </li>
