--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -82,15 +82,21 @@
                 type: "POST",
                 url: "{% url 'get_notifications_ajax' %}",
                 data: {
-                    csrfmiddlewaretoken: "{{ csrf_token }}"
+                    csrfmiddlewaretoken: "{{ csrf_token }}",
                 },
                 success: function(data){
-                    $("#notificationsLoader").html('<h3>Notifications</h3>');
+                    $("#notification_dropdown").html('<li role="presentation" class="dropdown-header">Notifications</li>');
                     var count = data.count;
                     console.log(count);
-                    $(data.notifications).each(function(){
-                        $("#notificationsLoader").append(this + "<br/>")
-                    });
+                    if (count == 0){
+                        var url = '{% url "notifications_all" %}'
+                        $("#notification_dropdown").append("<li><a href='" + url + "'>View All Notifications</a></li>")
+                    }else{
+                        $(data.notifications).each(function(){
+                            var link = this;
+                            $("#notification_dropdown").append("<li>" + link + "</li>")
+                        });
+                    }
                     console.log(data.notifications);
                 },
                 error: function(rs, e){
