--- a/src/templates/videos/category_list.html
+++ b/src/templates/videos/category_list.html
@@ -7,5 +7,6 @@
 
 {% for item in queryset %}
 <a href="{{ item.get_absolute_url }}">{{ item }}</a><br/>
+<a href="{{ item.get_absolute_url }}"><img src="{{ item.get_image_url }}" class="img-responsive"/></a><br/>
 {% endfor %}
 {% endblock %}
