--- a/src/templates/videos/video_list.html
+++ b/src/templates/videos/video_list.html
@@ -7,7 +7,7 @@
 
 {% for item in queryset %}
 
-<a href="{{ item.get_absolute_url }}">{{ item }}</a><br/>
+{{ item.order }} - <a href="{{ item.get_absolute_url }}">{{ item }}</a><br/>
 
 {% endfor %}
 
