Home page cleaned with bootstrap template

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -41,6 +41,8 @@
 
 
     <div class="container">
+        {% block jumbotron %}
+        {% endblock %}
       <div id="notificationsLoader">
 
       </div>
