--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -26,7 +26,11 @@
             </li>
               <li><a href="{% url 'logout' %}">Logout</a> </li>
             {% else %}
-              <li><a href="{% url 'login' %}">Login</a> </li>
+              {% if request.get_full_path == "/" %}
+              {% else %}
+                <li><a href="{% url 'register' %}">Register</a> </li>
+                <li><a href="{% url 'login' %}">Login</a> </li>
+              {% endif %}
             {% endif %}
 
           </ul>
