--- a/src/templates/home_logged_in.html
+++ b/src/templates/home_logged_in.html
@@ -10,8 +10,10 @@
 
 {% block content %}
     <div class="row">
+        <div class="col-sm-4">
+        <div class="row">
         {% if recent_videos %}
-            <div class="col-sm-4">
+            <div class="col-sm-12">
                 <h1>Recent Videos</h1>
                 {% for vid in recent_videos %}
 
@@ -23,18 +25,40 @@
                 {% endif %}
 
                 {% endfor %}
+                <hr/>
             </div>
 
         {% endif %}
+
+
+        {% if popular_videos %}
+            <div class="col-sm-12">
+                <h1>Popular Videos</h1>
+                {% for vid in popular_videos %}
+
+                <a href="{{ vid.get_absolute_url }}">{{ vid.title }}</a><br/>
+                {% if forloop.counter == 1 %}
+
+                <a href="{{ vid.get_absolute_url }}"><img src="{{ vid.category.get_image_url }}" class="img-responsive"/></a><br/>
+
+                {% endif %}
+
+                {% endfor %}
+                <hr/>
+            </div>
+
+        {% endif %}
+            </div>
+        </div>
+        <div class="col-sm-8">
         {% if recent_comments %}
-            <div class="col-sm-8">
                 <h1>Recent Comments</h1>
                 <table class="table">
                 {% for comment in recent_comments %}
                     <tr><td><a href="{{ comment.get_absolute_url }}">{{ comment.get_preview }}</a><br/><small>via {{ comment.user }} | {{ comment.timestamp|timesince}} ago</small></td><td><a href="{{ comment.get_absolute_url }}">View</a></td></tr>
                 {% endfor %}
                 </table>
-            </div>
         {% endif %}
+        </div>
     </div>
 {% endblock %}
