--- a/src/templates/billing/upgrade.html
+++ b/src/templates/billing/upgrade.html
@@ -6,6 +6,13 @@ braintree.setup("{{ client_token }}", "dropin", {
     container: "checkout",
     form: "checkoutForm",
 });
+
+$("#submitPayment").on("click", function(){
+    var btn = $(this).button("loading")
+    setTimeout(function(){
+        btn.button('reset');
+    }, 4500)
+});
 {% endblock %}
 </script>
 {% block content %}
@@ -15,7 +22,7 @@ Upgrade Your Account!
 <div class="col-sm-4">
 <form id="checkoutForm" method="POST" action=".">{% csrf_token %}
 <div id="checkout" style="min-height: 350px;"></div>
-<input type="submit" class="btn btn-default btn-block" value="Complete upgrade" />
+<input id="submitPayment" type="submit" data-loading-text="Completing..." class="btn btn-default btn-block" value="Complete upgrade" autocomplete="off"/>
 </form>
 </div>
 
