--- a/src/templates/home_visitor.html
+++ b/src/templates/home_visitor.html
@@ -5,15 +5,73 @@
 <style>
 {% block style %}
 
+.panel{
+    margin-top:20px;
+    }
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: normal;
+}
+.marketing .col-lg-4 p {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 768px) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 992px) {
+  .featurette-heading {
+    /*margin-top: 120px;*/
+  }
+}
 {% endblock %}
 </style>
 
 {% block jumbotron %}
+<div class="container-fluid">
 <div class="jumbotron">
+    <div class="container">
     <div class="row">
         <div class="col-sm-6">
             <h1>Welcome</h1>
-            <p>This is our site.</p>
+            <p>Our Site offers Master Entrepreneur Coaching Programs.</p>
         </div>
             <div class="col-sm-6">
             <div role="tabpanel">
@@ -52,71 +110,122 @@
 
     </div>
 </div>
+</div>
+</div>
 {% endblock %}
 
 {% block content %}
 
+<!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <h2>Aspiring Entrepreneur</h2>
+          <p>If you are thinking of starting a business, we can help.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <h2>New Entrepreneur</h2>
+          <p>Have you been in business for less than 3 years? We can help.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <h2>Experienced Entrepreneur</h2>
+          <p>Have you been in business for more than 3 years? We can help.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+
+      <!-- START THE FEATURETTES -->
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-sm-7">
+          <h2 class="featurette-heading">Most Demand courses in our Program. <span class="text-muted">It'll blow your mind.</span></h2>
+        </div>
+        <div class="col-sm-5">
+          {% if featured_categories %}
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                  {% for cat in featured_categories %}
+                <li data-target="#carousel-example-generic" data-slide-to="{{ forloop.count }}" class="{% if forloop.first %}active{% endif %}"></li>
+                  {% endfor %}
+              </ol>
+
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
+                {% for cat in featured_categories %}
+                <div class="item {% if forloop.first %} active {% endif %}">
+                    <a href="{{ cat.get_absolute_url }}">
+                  <img src="{{ cat.get_image_url }}" class="img-responsive">
+                    </a>
+                  <!--<div class="carousel-caption">-->
+                    <!--<a href="{{ cat.get_absolute_url }}">{{ cat.title }}</a>-->
+                  <!--</div>-->
+                </div>
+                {% endfor %}
+              </div>
+
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+
+        {% endif %}
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-sm-7 col-md-push-5">
+          <h2 class="featurette-heading">Most Demand Video Lessons available all day long! <span class="text-muted">See for yourself.</span></h2>
+          <p class="lead">We help you expand and refine your entrepreneurial leadership skills. As a result, you will be more Focused, Centred and Effective resulting in both personal and business success</p>
+        </div>
+        <div class="col-sm-5 col-md-pull-7">
+            {% if featured_videos %}
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Featured Videos</h3>
+                  </div>
+                      <table class="table table-striped">
+                    {% for vid in featured_videos %}
+
+                    <tr><td><a href="{{ vid.get_absolute_url }}">{{ vid.title }}</a>{% if vid.free_preview %} Free Preview{% endif %}</td></tr>
+
+                    {% endfor %}
+                      </table>
+                </div>
+
+            {% endif %}
+        </div>
+      </div>
+
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
+
 
 <div class="row">
 
-{% if featured_categories %}
-
-
-    <div class="col-sm-6">
-        <h1>Featured Categories</h1>
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-          {% for cat in featured_categories %}
-        <li data-target="#carousel-example-generic" data-slide-to="{{ forloop.count }}" class="{% if forloop.first %}active{% endif %}"></li>
-          {% endfor %}
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        {% for cat in featured_categories %}
-        <div class="item {% if forloop.first %} active {% endif %}">
-            <a href="{{ cat.get_absolute_url }}">
-          <img src="{{ cat.get_image_url }}" class="img-responsive">
-            </a>
-          <!--<div class="carousel-caption">-->
-            <!--<a href="{{ cat.get_absolute_url }}">{{ cat.title }}</a>-->
-          <!--</div>-->
-        </div>
-        {% endfor %}
-      </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-</div>
-
-{% endif %}
-{% if featured_videos %}
-    <div class="col-sm-6">
-
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Featured Videos</h3>
-      </div>
-          <table class="table table-striped">
-        {% for vid in featured_videos %}
-
-        <tr><td><a href="{{ vid.get_absolute_url }}">{{ vid.title }}</a>{% if vid.free_preview %} Free Preview{% endif %}</td></tr>
-
-        {% endfor %}
-          </table>
-    </div>
-    </div>
-
-{% endif %}
 </div>
 
 
