--- a/src/templates/home_visitor.html
+++ b/src/templates/home_visitor.html
@@ -5,9 +5,16 @@
 <style>
 {% block style %}
 
+.jumbotron{
+    background-image: url("http://www.transparenttextures.com/patterns/batthern.png");
+    background-color: #6CDA7F;
+    }
+
 .panel{
     margin-top:20px;
     }
+
+
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
