Homepage update with hover over register and login panels

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -63,6 +63,30 @@
         color: #0C0E0C;
       }
 
+     .panel-jumbotron{
+        margin-top: 0px !important;
+        border-radius: 0px 4px 4px 4px;
+        min-height: 300px;
+        text-align: center;
+      }
+
+     .panel-jumbotron p{
+        font-size: 16px;
+        }
+
+    .nav-tabs-jumbotron>li>a{
+        color: #333;
+        background-color:#999;
+        }
+
+    .nav-tabs-jumbotron>li{
+
+        }
+
+    nav-tab-item-jumbotron{
+        background-color:#999;
+        }
+
       {% block style %}
 
       {% endblock %}
