--- a/src/templates/home_visitor.html
+++ b/src/templates/home_visitor.html
@@ -84,7 +84,7 @@
             <div role="tabpanel">
 
           <!-- Nav tabs -->
-          <ul class="nav nav-tabs" role="tablist">
+          <ul class="nav nav-tabs nav-tabs-jumbotron" role="tablist">
             <li role="presentation" class="active"><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Register</a></li>
             <li role="presentation"><a href="#login" aria-controls="login" role="tab" data-toggle="tab">Login</a></li>
           </ul>
@@ -92,18 +92,20 @@
           <!-- Tab panes -->
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="register">
-                <div class="panel panel-default">
+                <div class="panel panel-jumbotron panel-default">
                   <div class="panel-body">
                     <form method="POST" action="{% url 'register' %}">{% csrf_token %}
                     {{ register_form.as_p }}
                     <input class="btn btn-default btn-block btn-lg" type="submit" value="Register" />
                     </form>
+                      <br/>
+                      <p>By Registering you agree to our<a href="#"> terms</a> </p>
                   </div>
                 </div>
 
             </div>
             <div role="tabpanel" class="tab-pane" id="login">
-                <div class="panel panel-default">
+                <div class="panel panel-jumbotron panel-default">
                 <form method="POST" action="{% url 'login' %}">{% csrf_token %}
                     {{ login_form.as_p }}
                     <input class="btn btn-default btn-block" type="submit" value="Login" />
