--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,9 +23,20 @@
     <!-- Custom styles for this template -->
     <style>
       body{
-        min-height : 2000px;
+        /*min-height : 2000px;*/
       }
 
+      .main-container{
+        min-height:750px;
+        }
+
+      .footer{
+        background-color:#c5c5c5;
+        min-height:50px;
+        padding:20px 0px;
+        text-align:center;
+        margin-top: 50px;
+        }
       .navbar-default{
         margin-bottom:0px;
       }
@@ -100,7 +111,7 @@
 
         {% block jumbotron %}
         {% endblock %}
-    <div class="container">
+    <div class="container main-container">
 
       <div id="notificationsLoader">
 
@@ -125,6 +136,8 @@
       </div> -->
 
     </div> <!-- /container -->
+
+  {% include 'footer.html' %}
 
   {% include 'javascript.html' %}
   <script>
