--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -10,3 +10,4 @@
     <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
 
     <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
+    <script src="http://fast.wistia.net/assets/external/E-v1.js" async></script>
