--- a/src/templates/billing/upgrade.html
+++ b/src/templates/billing/upgrade.html
@@ -16,14 +16,20 @@ $("#submitPayment").on("click", function(){
 {% endblock %}
 </script>
 {% block content %}
-
-Upgrade Your Account!
-
-<div class="col-sm-4">
+<div class="row">
+    <div class="col-sm-12" style='text-align:center;'>
+        <h1>Upgrade your account!</h1>
+        <p class="lead">For $75 a month get unlimited access</p>
+    </div>
+</div>
+<div class="row">
+    <hr/>
+<div class="col-sm-4 col-sm-offset-4">
 <form id="checkoutForm" method="POST" action=".">{% csrf_token %}
 <div id="checkout" style="min-height: 350px;"></div>
 <input id="submitPayment" type="submit" data-loading-text="Completing..." class="btn btn-default btn-block" value="Complete upgrade" autocomplete="off"/>
 </form>
+</div>
 </div>
 
 {% endblock %}
