--- a/src/templates/videos/video_detail.html
+++ b/src/templates/videos/video_detail.html
@@ -43,7 +43,35 @@
 
 
 {% block content %}
+<div class="row">
+<div class="col-sm-8">
+    <h1>{{ obj.title }}</h1>
+    </div>
+<div class="col-sm-4" style="text-align:center;">
 
+{% if obj.get_previous_url %}
+<a href="{{ obj.get_previous_url }}"><i class="fa fa-3x fa-arrow-circle-o-left">Previous</i></a>
+{% endif %}
+
+{% if obj.get_next_url %}
+<a href="{{ obj.get_next_url }}"><i class="fa fa-3x fa-arrow-circle-o-right">Next</i></a>
+{% endif %}
+
+   <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ obj.get_share_link }}">
+<i class="fa fa-facebook-official fa-3x"></i>
+</a>
+
+<a target="_blank" href="https://twitter.com/home?status={{ obj.get_share_message|safe }}"><i class="fa fa-twitter-square fa-3x"></i></a>
+
+<a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url={{ obj.get_share_link }}&title={{ obj.get_share_message|safe }}&summary={{ obj.get_share_message|safe }}&source={{ obj.get_share_link }}">
+<i class="fa fa-linkedin-square fa-3x"></i>
+</a>
+
+</div>
+<div class="col-sm-12">
+    <hr/>
+</div>
+</div>
 <!--if you wanted to change the size of the video change class of div to col-sm-* etc-->
 <div class="col-sm-12" id = "main_video">
 {{ obj.embed_code|safe }}
@@ -60,23 +88,6 @@
 
 <br/>
 
-<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ obj.get_share_link }}">
-<i class="fa fa-facebook-official fa-3x"></i>
-</a>
-
-<a target="_blank" href="https://twitter.com/home?status={{ obj.get_share_message|safe }}"><i class="fa fa-twitter-square fa-3x"></i></a>
-
-<a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url={{ obj.get_share_link }}&title={{ obj.get_share_message|safe }}&summary={{ obj.get_share_message|safe }}&source={{ obj.get_share_link }}">
-<i class="fa fa-linkedin-square fa-3x"></i>
-</a>
-
-{% if obj.get_previous_url %}
-<a href="{{ obj.get_previous_url }}">Previous</a>
-{% endif %}
-
-{% if obj.get_next_url %}
-<a href="{{ obj.get_next_url }}">Next</a>
-{% endif %}
 
 <br/>
 <hr/>
