--- a/src/templates/billing/history.html
+++ b/src/templates/billing/history.html
@@ -1,7 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="row">
+    <div class="col-sm-10">
+<h1>Billing History</h1>
+</div>
+<div class="col-sm-2">
+{% if not request.user.is_member %}
+    <br/>
+    <a class="btn btn-warning btn-block" href="{% url 'account_upgrade' %}">Upgrade Account</a>
+{% endif %}
+</div>
+</div>
 
+<div class="row">
+<div class="col-sm-12">
 <table class="table">
 <thead>
 <th>Order #</th>
@@ -19,5 +32,6 @@
 
 {% endfor %}
 </table>
-
+</div>
+</div>
 {% endblock %}
