--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -24,7 +24,7 @@
 
               </ul>
             </li>
-              <li><a href="{% url 'billing_history' %}">Account</a></li>
+              <li><a href="{% url 'account_home' %}">Account</a></li>
               <li><a href="{% url 'logout' %}">Logout</a> </li>
             {% else %}
               {% if request.get_full_path == "/" %}
