--- a/src/templates/accounts/account_home.html
+++ b/src/templates/accounts/account_home.html
@@ -10,8 +10,13 @@
     <div class="row">
         <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
-    <h3>Notifications</h3>
-    <a href="{% url 'notifications_all' %}">View</a>
+    <h3>Notifications<small><a href="{% url 'notifications_all' %}">View All</a></small></h3>
+        <table class="table">
+{% for note in notifications %}
+    <tr><td>{{ note|safe }}</td><td>{% if note.read %} Read {% else %} Unread {% endif %}</td></tr>
+{% endfor %}
+</table>
+
     </div>
 </div>
     </div>
@@ -33,8 +38,27 @@
     </div>
 <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
-    <h3>Billing History</h3>
-    <a href="{% url 'billing_history' %}">View</a>
+    <hr/>
+    <h3>Recent Billing History
+    <small><a href="{% url 'billing_history' %}">View</a></small>
+    </h3>
+    <table class="table">
+    <thead>
+    <th>Order #</th>
+    <th>Amount</th>
+    <th>Payment Method</th>
+    <th>Date</th>
+    </thead>
+    {% for object in transactions %}
+        <tr>
+            <td>{{ object.order_id }}</td>
+            <td>${{ object.amount }}</td>
+            <td>{{ object.card_type }}{% if object.last_four %}<br/>Last Four Digits: {{ object.last_four }}{% endif %}</td>
+            <td>{{ object.timestamp }}</td>
+        </tr>
+
+    {% endfor %}
+    </table>
     </div>
 </div>
 {% endblock %}
