--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,6 +25,9 @@
       body{
         /*min-height : 2000px;*/
       }
+        .navbar-brand{
+        font-size:25px;
+        }
 
       .main-container{
         min-height:750px;
@@ -60,6 +63,7 @@
 
       .navbar-default .navbar-nav>li>a {
         color: #FFFFFF;
+        font-size: 17px;
       }
 
       .navbar-default .navbar-nav>li>a:hover {
@@ -94,7 +98,7 @@
 
         }
 
-    nav-tab-item-jumbotron{
+    .nav-tab-item-jumbotron{
         background-color:#999;
         }
 
