--- a/src/templates/videos/video_list.html
+++ b/src/templates/videos/video_list.html
@@ -10,6 +10,7 @@
     <div class="row">
         <div class="col-sm-6">
             <h1>{{ obj.title }}</h1>
+            <h2>{{ obj.description }}</h2>
         </div>
         <div class="col-sm-6">
             <img src="{{ obj.get_image_url }}" class="img-responsive"/>
@@ -26,12 +27,12 @@
 {% if queryset %}
 <table class="table">
     <thead>
-        <th>#</th>
-        <th>Lectures</th>
+        <th><h3>#</h3></th>
+        <th><h3>Lectures</h3></th>
     </thead>
 {% for item in queryset %}
 
-<tr><td>{{ forloop.counter }}</td><td>{% if request.user.is_authenticated or item.has_preview %} <a href="{{ item.get_absolute_url }}">{{ item }}</a>{% else %} {{ item }} {% endif %}</td></tr>
+<tr><td><h2>{{ forloop.counter }}</h2></td><td>{% if request.user.is_authenticated or item.has_preview %} <a href="{{ item.get_absolute_url }}"><h2>{{ item }}</h2></a>{% else %} <h2>{{ item }}</h2> {% endif %}</td></tr>
 
 
 {% endfor %}
